Tue Aug  9 22:03:14 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Use a separate method for start_session() instead of starting
          the session inside make_datalink().

Tue Aug  9 20:41:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Only return a datalink from find_datalink() if both the datalink
          and the session already exist.  If the session doesn't exist yet,
          need to fall through to connect_datalink() or accept_datalink().

        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Removed old code for fully-associated.  Added find_session().

        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.h:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:
        * dds/DCPS/transport/multicast/ReliableSession.h:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Refactored SYN and SYNACK handling from the ReliableSession class to
          the MulticastSession so those features are shared with BestEffort.
          This will allow the SYN/SYNACK handshaking to be used by either kind
          of session, to fit in the framework's transport autonegotiation.
          Not yet hooked in to the framework.

        * dds/DCPS/transport/udp/UdpTransport.h:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Removed methods that are no longer used in the framework.

Tue Aug  9 19:41:29 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/traits_cpp.xsl:
